updated chat bot

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script type="text/javascript">
         /* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
         (function (d, m) {
-            var kommunicateSettings = { "appId": "19b5feeea68bbda6b092915fcf0e7ebc3", "conversationTitle": "Banking Cat", "botIds": ["banking-cat"] };
+            var kommunicateSettings = { "appId": "19b5feeea68bbda6b092915fcf0e7ebc3", "conversationTitle": "Banking Cat", "botIds": ["cat"] };
             var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
             s.src = "https://api.kommunicate.io/v2/kommunicate.app";
             var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
