for my assignment back up in my laptop do it later

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <source src="./assets/img/videos/trim1.mp4" type="video/mp4">
                 </video>
                 <div class="overlay-desc animatable fadeInUp">
-                    <h1>Enjoy your personal Slience</h1>
+                    <h1>Enjoy Your Personal Silence</h1>
                 </div>
             </div>
         </div>
