for my assignment back up in my laptop do it later

--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
         <!-- Donate Us -->
         <div id="donate" class="section text-center container-fluid">
             <div class="container animatable fadeInUp">
-                <h1 class="title">Why Sponsors Us</h1>
+                <h1 class="title">Why Sponsor Us</h1>
                 <div class="row animatable fadeInUp">
                     <div class="col-md-12 ml-auto mr-auto">
                         <h5 id="test" class="description animated">
