--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="col-md-6 col-md-offset-3">
             <div class="card">
                 <div class="card-image">
-                    <img class="img-responsive" src="">
+                    <img class="img-responsive" src="asset/troll.png">
                     
                 </div><!-- card image -->
                 
